# hipttyV2

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
crates/hiptty/: Cargo.toml
crates/hiptty-adapter/: Cargo.toml
crates/hiptty-adapter/src/: auth.rs  client.rs  discuz.rs  fixture.rs  inline_images.rs  lib.rs  post_throttle.rs  session.rs  stub.rs  write.rs
crates/hiptty-adapter/src/http/: decode.rs  mod.rs  urls.rs
crates/hiptty-adapter/src/parser/: common.rs  content.rs  mod.rs  pre_post.rs  simple_list.rs  thread_detail.rs  thread_list.rs  user_info.rs
crates/hiptty-adapter/tests/fixtures/: blacklist.html  favorites_p1.html  login_form.html  my_replies_p1.html  my_threads_p1.html  notifications.html  pm_check_new_empty.xml  pm_list.html  pm_new_empty.html  pm_thread.html  pm_thread_empty.html  pre_post_quote.html  pre_post_reply.html  search_title_p1.html  thread_detail_448060_p1.html  thread_list_geek_talks_p1.html  user_info_189027.html
crates/hiptty-app/: Cargo.toml
crates/hiptty-app/src/: app.rs  commands.rs  composer.rs  config.rs  draw.rs  event.rs  handlers.rs  lib.rs  list_page.rs  mouse.rs  nav.rs  run.rs  worker.rs
crates/hiptty-cli/: Cargo.toml
crates/hiptty-cli/src/: auth_prompt.rs  cli.rs  main.rs  output.rs  run.rs
crates/hiptty-cli/tests/: cli_integration.rs
crates/hiptty-core/: Cargo.toml
crates/hiptty-core/src/: content.rs  error.rs  forum.rs  lib.rs  list.rs  password.rs  poll.rs  post.rs  search.rs  security.rs  session.rs  settings.rs  thread.rs  user.rs
crates/hiptty-image/: Cargo.toml
crates/hiptty-image/src/: avatar_disk.rs  avatar_placeholder.rs  cache.rs  content_layout.rs  draw.rs  layout.rs  lib.rs  prefetch.rs  smiley.rs
crates/hiptty-render/: Cargo.toml
crates/hiptty-render/src/: content.rs  fill.rs  lib.rs  terminal.rs  text.rs  theme.rs  wrap.rs
crates/hiptty-widgets/: Cargo.toml
crates/hiptty-widgets/src/: composer.rs  content_state.rs  floor_list.rs  forum_picker.rs  forum_tabs.rs  ime.rs  layout.rs  lib.rs  login.rs  logo.rs  modal.rs  overlays.rs  pm_thread.rs  poll_block.rs  scroll.rs  simple_list.rs  status_bar.rs  thread_list.rs  title_bar.rs  toast.rs  visual_snapshot.rs
crates/hiptty/src/: main.rs
docs/: README.md  api.md  architecture.md  rust-ratatui-ecosystem-research.md  tui-design.md  tui-implementation-decisions.md
docs/archive/: README.md  rust-ratatui-ecosystem-research.md  tui-design.md
