[package]
name = "hiptty-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Discuz HTML adapter for 4d4y forum"

[dependencies]
hiptty-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
reqwest_cookie_store = { workspace = true }
scraper = { workspace = true }
encoding_rs = { workspace = true }
md-5 = { workspace = true }
regex = { workspace = true }
cookie_store = "0.22"
image = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }