[package]
name = "hiptty-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Application state and event loop for hiptty TUI"

[dependencies]
hiptty-adapter = { workspace = true }
hiptty-core = { workspace = true }
hiptty-render = { workspace = true }
hiptty-widgets = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }