[package]
name = "hiptty-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Application state and event loop for hiptty TUI"

[dependencies]
hiptty-adapter = { workspace = true }
hiptty-core = { workspace = true }
hiptty-image = { workspace = true }
hiptty-render = { workspace = true }
hiptty-widgets = { workspace = true }
ratatui-textarea = "0.9.2"
ratatui-image = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
