[package]
name = "hiptty-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Headless forum client for 4d4y — agent-ready CLI"

[[bin]]
name = "hiptty-cli"
path = "src/main.rs"

[dependencies]
hiptty-core = { workspace = true }
hiptty-adapter = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
dialoguer = "0.11"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = { workspace = true }