[package]
name = "hiptty-image"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal image cache and layout for hiptty TUI"

[dependencies]
hiptty-core = { workspace = true }
hiptty-render = { workspace = true }
image = { workspace = true }
ratatui = { workspace = true }
ratatui-image = { workspace = true }
rust-embed = { workspace = true, features = ["debug-embed"] }