[package]
name = "hiptty"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal UI client for 4d4y forum"

[[bin]]
name = "hiptty"
path = "src/main.rs"

[dependencies]
hiptty-adapter = { workspace = true }
hiptty-app = { workspace = true }
hiptty-core = { workspace = true }
tokio = { workspace = true }
color-eyre = { workspace = true }
clap = { workspace = true }